No longer able to get to visualization without proper login details

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,5 +1,5 @@
 <div class='container-fluid'>
-  <div class='d-flex header'>
+  <div class='header'>
     <h2>
       {{#link-to 'welcome'}}
         {{projectName}}
