--- a/app/templates/components/account/account-dropdown.hbs
+++ b/app/templates/components/account/account-dropdown.hbs
@@ -4,6 +4,7 @@
   {{/dd.trigger}}
     {{#dd.content class="content-bootstrap-feel"}}
     <div class="list-group list-group-item-action active">
+      <a class="list-group-item list-group-item-action list-group-flush">{{connection}}</a>
       <a class='list-group-item list-group-item-action list-group-flush' {{action 'goToGuide'}}>See Guides</a>
       <a class='list-group-item list-group-item-action list-group-flush' {{action 'logout'}}>Logout {{fa-icon 'sign-out-alt'}}</a>
     </div>
