--- a/app/templates/welcome.hbs
+++ b/app/templates/welcome.hbs
@@ -1,43 +1,29 @@
-<div class='container mt-3 welcome-page'>
-  <div class="card">
-    <div class="card-body d-flex justify-content-center">
-      <h3 class='card-title'>Welcome to Graph9!</h3>
+<div class='container-fluid'>
+  <div class="welcome-page">
+    <div class="card">
+      <div class="card-body d-flex justify-content-center">
+        <h3 class='card-title'>Welcome to Graph9!</h3>
+      </div>
+      <div class="card-body d-flex justify-content-center">
+        <p>Already know how everything works? Login to get started!</p> &nbsp;
+        {{#bs-button class="btn-outline-success btn-xs d-flex card-subtitle" onClick=(action 'login')}}
+          Login
+        {{/bs-button}}
+      </div>
     </div>
-    <div class="card-body d-flex justify-content-center">
-      <p>Already know how everything works? Login to get started!</p> &nbsp;
-      {{#bs-button class="btn-outline-success btn-xs d-flex card-subtitle" onClick=(action 'login')}}
-        Login
-      {{/bs-button}}
-    </div>
-  </div>
-  <br>
-
-  {{!-- <div class="row">
-    <div class="card-deck">
-      {{#each model as |card-info|}}
-        <div class="card mb-4 card-info">
-          <img class="card-img-top" style="border-radius:50%;padding:10px;" src={{card-info.picture}} alt={{card-info.alt}}>
-            <div class="class-header">
-              <h5 class="card-title">{{card-info.title}}</h5>
-            </div>
-          <div class="card-body">
-            <p class="card-text">{{card-info.text}}</p>
-          </div>
-        </div>
-      {{/each}}
-    </div>
-  </div> --}}
-
-  {{user-guide}}
-  <br>
-  <div class="card">
-    <div class="card-body d-flex justify-content-center">
-        Click Login to create your own graph and get started!
-    </div>
-    <div class="card-body d-flex justify-content-center">
-      {{#bs-button class="btn-outline-success btn-xs" onClick=(action 'login')}}
-        Login
-      {{/bs-button}}
+    <br>
+    
+    {{user-guide}}
+    <br>
+    <div class="card">
+      <div class="card-body d-flex justify-content-center">
+          Click Login to create your own graph and get started!
+      </div>
+      <div class="card-body d-flex justify-content-center">
+        {{#bs-button class="btn-outline-success btn-xs" onClick=(action 'login')}}
+          Login
+        {{/bs-button}}
+      </div>
     </div>
   </div>
 </div>
