updated guide and account dropdown

--- a/app/templates/components/user-guide.hbs
+++ b/app/templates/components/user-guide.hbs
@@ -32,7 +32,7 @@
             You will see all of the properties change into text inputs. Click on the <button class="button confirm">{{fa-icon 'plus-square'}}{{bs-tooltip title='Add Property'}}</button> to add a new property
           </li>
           <li>
-            You can now enter the name of your property and its value into the new text boxes.
+            You can now enter the name(key) of your property and its value into the new text boxes.
 
             <div class="row">
               <label for='key' class='col-5'>
