--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,107 +1,340 @@
-
-
 @import "ember-bootstrap/bootstrap";
 @import "ember-basic-dropdown";
+@import "ember-power-select";
 
-// app/styles/app.scss
+//Main
+body {
+  .main {
+    padding-top:50px;
+    .ember-cli-visjs-network .network-canvas {
+      height: 85vh;
+    }
+  }
+}
 
+.main {
+  background-color: #fff;
+}
+
+// User Guide
+
+.guide-navigation {
+  background-color: #aaa;
+  border-radius: 50px;
+  border: none;
+
+  &:hover {
+    background-color: #d8d8d8;
+  }
+}
+
+// application route
 .header {
   user-select: none;
+  position: fixed;
+  z-index: 1;
+  background-color: white;
+  width: 100%;
+  
   a {
-      text-decoration: none;
-      color: black;  
-    }
-
-  a:hover {
     text-decoration: none;
     color: black;
   }
+  
+  .graphing-tool-badge {
+    user-select: none;
+    opacity: 0.75;
+    font-size: 45%;
+  }
 }
 
-body {
-  padding-top:5px;
-  .main {
+// Vis parent toolbar
+.node-canvas-toolbar {
+  background-color: #dfdfdf;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+  border-bottom-right-radius: 5px;
+  border-bottom-left-radius: 5px;
+  margin-bottom: 1px;
+}
+
+.button-group {
+  margin: 0 15px;
+  padding: 2px;
+}
+
+// Default buttons
+.button {
+  background-color: #f1f1f1;
+  border-radius: 100%;
+  border: none;
+  width: 30px;
+  height: 30px;
+  cursor: pointer;
+}
+
+.confirm {
+  color: #28a745;
+  background-color: #f1f1f1;
+  border: 1px solid #28a745;
+  
+  &:hover {
+    background-color: #28a74610;
+  }
+}
+
+.cancel {
+  color: #dc3545;
+  background-color: #f1f1f1;
+  border: 0.3px solid #dc3545;
+  
+  &:hover {
+    background-color: #dc354510;
+  }
+}
+
+.warning {
+  color: red;
+  font-weight: 550;
+}
+
+// Node Edit
+
+.node-header {
+  margin: 0px -10px;
+  padding: 5px 20px;
+  position: relative;
+  top: -37px;
+  width: 100%;
+  border-radius: 30px;
+  background-color: lightgrey;
+  
+  .button {
+    position: relative;
+    top: -3px;
+  }
+  .node-name {
+    padding: 0 5px;
+    font-weight: 600;
+    font-size: 26px;
+    width: 80%;
+  }
+
+  .name-input {
+    margin: 0 5px;
+    padding: 2px 0;
+    position: relative;
+    right: 10px;
     width: 100%;
-    .ember-cli-visjs-network .network-canvas {
-      height: 80vh;
+    top: 4px;
+    font-weight: 600;
+    border-radius: 10px;
+    border: 1px solid #6d6d6d;
+  }
+}
+.labels-section {
+  margin:  10px -10px;
+  padding: 5px;
+  background: lightgrey;
+  border-radius: 25px;
+  
+  .remove-label-button {
+    width: 15px;
+    background: transparent;
+    border: none;
+    color: black;
+
+    &:hover {
+      background: #575757;
     }
   }
 
-  .remove-label-button {
-    background: rgba(255,255,255,0);
-    outline: none;
-    border: none;
-    color: black;
+  .label-title {
+    padding: 5px 20px;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+    background-color: #efefef;
+    font-size: 22px;
   }
-  
-  .close-edit:hover {
-    background: white;
-    border: none;
-  }
-  
-  .close-edit {
-    border: none;
-  }
-  
-  .reveal-connections {
-    color: rgba(0,0,0,0.65);
+
+  .label-list {
+    background: #efefef;
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+    padding: 5px 15px;
+    font-size: 1rem;
   }
 }
 
-.tooltip {
-  user-select: none;
+// Node Properties
+.properties {
+  margin: 10px -10px;
+  padding: 5px;
+  background: lightgrey;
+  border-radius: 25px;
+
+  .property-title {
+    padding: 5px 20px;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+    background-color: #efefef;
+    font-size: 22px;
+  }
+  .property-list {
+    position: relative;
+    background: #efefef;
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+    padding: 15px;
+    font-size: 1rem;
+    
+    .property {
+      padding: 2px;
+    }
+  }
 }
 
-.graphing-tool-badge {
-  opacity: 0.75;
-  font-size :50%;
+// Connected Properties
+.connected {
+  margin: 10px -10px;
+  padding: 5px;
+  background: lightgrey;
+  border-radius: 25px;
+
+  .title {
+    padding: 5px 20px;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+    background-color: #efefef;
+    font-size: 22px;
+  }
+
+  .list-outline {
+    position: relative;
+    background: #efefef;
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+    padding: 15px;
+    
+    .property {
+      border-radius: 15px;
+      padding: 1px;
+      cursor: pointer;
+      font-size: 15px;
+      
+      .item {
+        text-align: inherit;
+        padding: 0 10px;
+        display: inline;
+      }
+
+      .reveal-connections {
+        color: rgba(0,0,0,0.65);
+        background-color: transparent;
+        border: none;
+        border-radius: 50px;
+        cursor: pointer;
+
+        &:hover {
+          background-color: #cecece;
+        }
+      }
+
+      &:hover {
+        background-color: #e2e2e2;
+      }
+    }
+  }
 }
 
+// Toolbar search
+.breadcrumbs {
+  background-color: #AAAAAA;
+  border-radius: 15px;
+  padding: 3px;
+  margin: 5px;
+  
+  .search-query {
+    padding: 2px;
+    margin: 2px;
+  }
+}
+
+.info-text {
+  color: rgb(59, 59, 59);
+}
+
+.searching {
+  margin: 3px 5px;
+  
+  .search-choice {
+    padding: 2px 0;
+    margin: 1px 0;
+    border-top: 1px solid #aaaaaa;
+
+    .search-param {
+      border: none;
+      border-radius: 15px;
+      margin: 1px -1px;
+      cursor: pointer;
+  
+      &:hover {
+        background-color: #ababab;
+      }
+    }
+  }
+
+  .search-form {
+    border-top: 1px solid #aaaaaa;
+    margin: 1px -1px;
+    padding: 2px 0;
+
+    .search-bar {
+    }
+
+    .search-button {
+      background-color: green;
+      margin: 1px 5px;
+    }
+  }
+}
+
+//Account-dropdown
 .account-dropdown {
   position: fixed;
+  z-index: 2;
   top: 5px;
   right: 5px;
-}
-
-.propertyDeleteButtons {
-  right: 0;
-}
-
-.card-info {
-  min-width: 12rem;
-  max-width: 50rem;
-}
-
-.welcome-page {
-  padding: 0;
+  user-select: none;
 }
 
 .account-dropdown-list {
   list-style: none;
 }
 
-.footer {
-  user-select: none;
-  height: 5vh;
-  position: fixed;
-  bottom: 0;
-  width: 100%;
-  text-align: center;
-  background: white;
+// Welcome Page
+.card-info {
+  min-width: 12rem;
+  max-width: 50rem;
 }
 
-.badge {
-  user-select: none;
+// Canvas Wormhole
+#destination {
+  position:absolute;right:25px;top:5px;
 }
 
-@media (min-width: 768px) {
-  .main {
-    padding-right: 40px;
-    padding-left: 40px;
+// Modal
+.modal-button {
+  border: none;
+  border-radius: 50px;
+  background-color: #dfdfdf;
+
+  &:hover {
+    background-color: #afafaf;
   }
 }
 
-
+// Bootstrap defaults
 .trigger-bootstrap-feel {
   display: inline-block;
   text-align: center;
@@ -118,7 +351,7 @@ body {
 
 .trigger-bootstrap-feel:focus, .trigger-bootstrap-feel:hover {
   background-color: #d4d4d4;
-  border-color: #8c8c8c
+  border-color: #8c8c8c;
 }
 
 .content-bootstrap-feel {
@@ -129,7 +362,6 @@ body {
   padding: 5px;
   margin: 2px 0 0;
 }
-
+// Ember-power-select defaults
 $ember-power-select-border-color: #64A5ED;
 $ember-power-select-border-radius: 0;
-@import "ember-power-select";
