--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -269,7 +269,7 @@ body {
   
   .search-choice {
     padding: 2px 0;
-    margin: 1px 0;
+    margin: 1px 12px;
     border-top: 1px solid #aaaaaa;
 
     .search-param {
