--- a/app/templates/visualization/edit-window.hbs
+++ b/app/templates/visualization/edit-window.hbs
@@ -18,7 +18,7 @@
     </span>
   </div>
   <div class="labels-section">
-    <h5 class="label-title">Labels</h5>
+    <h5 class="label-title">Labels<button {{action "newLabel"}} class="button confirm"> {{fa-icon "plus"}}{{bs-tooltip title="Create New Label"}}</button></h5>
     <div class="label-list">
       {{#each model.labels as |label|}}
         <div class='label'>
@@ -26,16 +26,32 @@
           <label for="name" class='badge badge-pill' style='background:{{model.color}}'>
             {{bs-tooltip title=label}}
             {{label}}
-            {{#bs-button class='badge badge-pill badge-outline remove-label-button' onClick=(action 'deleteLabel' label)}}
+            {{#bs-button class='badge badge-pill badge-outline remove-label-button' onClick=(action 'removeLabel' label)}}
               {{fa-icon 'times'}}
             {{/bs-button}}
           </label>
         </div>
       {{/each}}
 
-      {{#power-select renderInPlace=true selected=labelChoice options=labelTypes onkeydown=(action 'customLabel') onchange=(action 'chooseLabel') as |type|}}
-        {{type}}
-      {{/power-select}}
+      <div class="row label-selection">
+          {{#each (without model.labels labelChoices) as |label|}}
+            <div class="col-6">
+              <button {{action "selectLabel" label}} class="label-selector">
+                {{label}}
+              </button>
+            </div>
+          {{/each}}
+          <div class="col">
+            
+          </div>
+      </div>
+      {{#if customLabel}}
+        {{#bs-form formLayout="vertical" model=this onSubmit=(action "submitNewLabel") as |form|}}
+          {{form.element controlType="text" required=true  placeholder="Enter a new label" property="addingNewLabel"}}
+          {{bs-button defaultText="Create Label" type="primary" buttonType="submit"}}
+        {{/bs-form}}
+      {{/if}}
+
     </div>
   </div>
   <div class="properties">
