--- a/app/templates/login.hbs
+++ b/app/templates/login.hbs
@@ -15,7 +15,7 @@
         {{form.element controlType="text" required=true  placeholder="Username" property="user"}}
         {{form.element controlType="password" required=true  placeholder="Password" property="password"}}
 
-        {{bs-button defaultText="Submit" type="primary" buttonType="submit"}}
+        {{bs-button defaultText="Login" type="primary" buttonType="submit"}}
         {{#if incorrectLogin}}
           <span class='warning'>Incorrect Username or Password</span>
         {{/if}}
