javascript standard style and tidy up

--- a/app/templates/login.hbs
+++ b/app/templates/login.hbs
@@ -20,7 +20,7 @@
           <span class='warning'>Incorrect Username or Password</span>
         {{/if}}
         {{#if incorrectConnection}}
-          <span class='warning'>Incorrect Connection</span>
+          <span class='warning'>Incorrect Connection. Check that your bolt connection, neo4j username, and neo4j password are entered correctly </span>
         {{/if}}
       {{/bs-form}}
     </div>
