--- a/app/templates/components/node-view.hbs
+++ b/app/templates/components/node-view.hbs
@@ -7,7 +7,7 @@
       {{node.name}}
     </strong>
     {{#each node.labels as |label|}}
-      <div class='badge badge-pill' style='background:{{node.color}}'>
+      <div class='badge badge-pill' style='background:{{color}}'>
         {{label}}
       </div>
     {{/each}}
